# rustux

./: Cargo.toml
examples/assets/first/: app.rux  item_label.rux  selections.rux
src/: application.rs  main.rs  rendering.rs
src/abstract_syntax/: linking.rs  mod.rs  properties.rs  tree.rs  types.rs
src/abstract_syntax/tokens/: building.rs  mod.rs  stream.rs
src/backends/: mod.rs
src/backends/egui_glium_backend/: mod.rs
src/backends/egui_glium_backend/abstract_syntax/: graph.rs  mod.rs  rendering.rs  tokens.rs  tree.rs  types.rs
src/backends/egui_glium_backend/abstract_syntax/graph/: graph.rs  mod.rs
src/backends/egui_glium_backend/abstract_syntax/stream/: lookup.rs  mod.rs  (+2 more)
src/backends/egui_glium_backend/rendering/: egui_render.rs  mod.rs  screen.rs
src/events/: channel.rs  loops.rs  mod.rs  producer.rs
src/examples/: first.rs
src/source/: mod.rs  source.rs
src/source/files/: changes.rs  file_reading.rs  folder_walking.rs  location.rs  mod.rs  monitoring.rs  reading.rs  source_files.rs
src/source/folders/: mod.rs  walking.rs
src/source/mapping/: mod.rs
src/source/tokenization/: abstract_syntax.rs  arrays.rs  code.rs  collection.rs  collections.rs  lookup.rs  mod.rs  source.rs  tuple.rs
src/source/tokenization/source/: mod.rs  tokeniser.rs  visitation.rs
src/source/tokenization/tests/: control.rs  mod.rs
src/state/: actions.rs  arrays.rs  containers.rs  context.rs  mod.rs  scopes.rs  selectors.rs  state.rs  variables.rs
src/systems/: cleanup.rs  mod.rs  parsing.rs  remove_entities.rs  rendering.rs  source_build.rs  source_monitor.rs
(+36 files in other folders)
