[package]
name = "ruxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
legion = "0.3.1"
shrev = "1.1.1"
glium = "0.30.0"
winit = "0.21"
egui_glium="0.14.0"
egui="0.14.0"
notify = "4.0.15"
walkdir = "2"
pretty_env_logger = "*"


